# marrtinorobot2

./: MARRTINOTOBOT2.rnd  ManualeOperativo.docx  README.md  ROBOT_INSTALLATION.md  ROS2.rnd  install.bash  install.sh  install_marrtinorobot2.bash  motioncontrol.py  setwww.sh  tips.rnd  xrdp.rnd
bringup/: 1-bringup.bash  autostart.py  check.py  into_tmux.sh  robot_bringup.py  test.py  tmuxsend.py  wsbringup.py
docker/: .env  Dockerfile  Dockerfile copy.humble_system  Dockerfile.bak  Dockerfile.base  Dockerfile.desktop  Dockerfile.humble-arm64  Dockerfile.humble_system  Dockerfile.mate  Dockerfile.microros  Dockerfile.old  Dockerfile.robot  Dockerfile.system  Dockerfile.system.bak  build.sh  clean.sh  docker-compose.nginx  docker-compose.yaml-old  docker-compose.yml  docker-compose.yml.humble  entrypoint.sh  read.me  run.sh  run_local.bash
flask_interface/: README.rnd  bringup.py  bringup_state.json
install/: base.sh  disablesleep.sh  inst_docker.sh  inst_microros.sh  install-m-explorer.sh  install.sh  installROS2.sh  install_depthai.sh  install_docker_rpi5.bah  install_dynamixel.sh  install_nginx.sssh  install_xrdp.sh  installenv.sh  installgithub.sh  installintodocker.sh  installnovnc.sh  installturtlebot.sh  instdocker2404.sh  prerequisite.sh  read.me  recompile.sh  rmpdocker.sh  slamtec-rplidar.sh
interface/: README.rnd  blocly.py  bringup.py  bringup_state.json  config-routing.bash  (+4 more)
marrtinorobot2_ui/: package.xml  setup.cfg  setup.py
marrtinorobot2_ui/launch/: ui_node.launch.py
marrtinorobot2_ui/marrtinorobot2_ui/: testai.py  testui.py  ui_node.py.old
(+345 files in other folders)
