<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>marrtinorobot2_ui</name>
  <version>1.0.0</version>
  <description>UI interface of MARRtino robot</description>
  <maintainer email="ferrarini09@gmail.com">Ferrarini Fabio</maintainer>
  <license>Apache 2.0</license>
 
  <depend>rclpy</depend>
  <depend>gtts</depend>
  <depend>std_msgs</depend>

 
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
